Fixed overflow issue

--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -1,6 +1,6 @@
 @import './../../variables';
 .top-bar {
-    width: 100%;
+    width: calc(100% - 40px);
     height: 50px;
     padding: 10px 20px 0 20px;
     background: #05090D;//$gradient-bg;
